# ur5e_ws

universal_robot/universal_robots/: package.xml
universal_robot/ur_kinematics/: CMakeLists.txt
ur5e_gazebo/: CMakeLists.txt  package.xml
ur5e_gazebo/launch/: sim.launch  sim_1.launch
ur5e_gazebo/obstacle_avoidance/: collision_checker.py  movement_controller.py  planner.py  scene_manager.py
ur5e_gazebo/scripts/: avoid.py  avoid_1.py  main.py  move_box.py  move_viewpoints.py
ur5e_gazebo/urdf/: cubic_obstacle.urdf
ur5e_gazebo/worlds/: empty_world.launch  move.launch  move_1.launch
