<?xml version="1.0"?>
<package format="2">
  <name>ur5e_gazebo</name>
  <version>0.0.1</version>
  <description>The ur5e_gazebo package</description>
  <maintainer email="hyma6858@foxmail.com">hym</maintainer>
  <license>BSD</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 构建依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>shapely</build_depend>

  <!-- 运行依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>shapely</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>